# analysis-bot

./: docker-compose.yaml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/2026/01/: 31_1050_25_7835e5fad2cc_first.py
app/core/: bot.py  config.py  crypto.py
app/core/models/: __init__.py  db_helper.py  user.py
app/handlers/: gas.py  price.py  router.py  rsi.py  signals.py  top10.py
app/repository/: users.py
app/router/: __init__.py
app/router/main/: __init__.py  price.py  start.py
app/service/: coingecko.py  ethereum.py  signals.py
app/service/crypto/: __init__.py  prices.py
