[project]
name = "analysis-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "max",email = "loxand42@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "web3 (>=7.14.0,<8.0.0)",
    "pycoingecko (>=3.2.0,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
