[project]
name = "analysis-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "max",email = "loxand42@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiogram (==3.20.0)",
    "aiogram-tonconnect (==0.15.0)",
    "pydantic (==2.10.6)",
    "pydantic-settings (==2.7.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "web3 (>=7.14.0,<8.0.0)",
    "pycoingecko (>=3.2.0,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
